removed reverse mode for transaction deletion - was too much trouble. Fixed problem with transaction operations not working properly

--- a/mcapi.css
+++ b/mcapi.css
@@ -56,6 +56,7 @@ div.transaction.certificate ul.transaction-operations{
   list-style: none;
   text-align: center;
   margin-top: 1em;
+  clear:both;
 }
 
 ul.transaction-operations li{
